--- a/styles/utility.css
+++ b/styles/utility.css
@@ -420,3 +420,10 @@ body {
 .uppercase {
     text-transform: uppercase;
 }
+
+
+/* Border Radius */
+
+.rounded-full {
+    border-radius: 9999px;
+}
