--- a/styles/style.css
+++ b/styles/style.css
@@ -351,6 +351,18 @@ body {
 
 /* Accessibility */
 
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+}
+
 a,
 button,
 [tabindex="0"] {
@@ -532,70 +544,69 @@ body {
     margin-bottom: calc(-1 * (var(--segment) / 5));
 }
 
-#intro_left-column h2>span {
+#intro_left-column h2>div>span {
     display: inline-block;
-    pointer-events: none;
     font-weight: var(--text-xl-font-weight);
     font-size: var(--text-xl-font-size);
     line-height: var(--text-xl-line-height);
 }
 
-#intro_left-column h2>span::before {
+#intro_left-column h2>div>span::before {
     content: "";
     margin-bottom: var(--text-xl_before-margin-bottom);
     display: table;
 }
 
-#intro_left-column h2>span::after {
+#intro_left-column h2>div>span::after {
     content: "";
     margin-top: var(--text-xl_after-margin-top);
     display: table;
 }
 
 @media (min-width: 45rem) {
-    #intro_left-column h2>span[style*="--i: 7;"] {
+    #intro_left-column h2>div>span[style*="--i: 7;"] {
         display: block;
         width: 0;
         height: 0;
     }
 
-    #intro_left-column h2>span[style*="--i: 8;"] {
+    #intro_left-column h2>div>span[style*="--i: 8;"] {
         padding-top: var(--segment-third);
     }
 
-    #intro_left-column h2>span[style*="--i: 9;"] {
+    #intro_left-column h2>div>span[style*="--i: 9;"] {
         transform: translateX(-0.15rem);
     }
 
-    #intro_left-column h2>span[style*="--i: 10;"] {
+    #intro_left-column h2>div>span[style*="--i: 10;"] {
         transform: translateX(-0.225rem);
     }
 
-    #intro_left-column h2>span[style*="--i: 11;"] {
+    #intro_left-column h2>div>span[style*="--i: 11;"] {
         transform: translateX(-0.3rem);
     }
 }
 
 @media (min-width: 67.5rem) {
-    #intro_left-column h2>span[style*="--i: 7;"] {
+    #intro_left-column h2>div>span[style*="--i: 7;"] {
         display: inline-block;
         width: unset;
         height: unset;
     }
 
-    #intro_left-column h2>span[style*="--i: 8;"] {
+    #intro_left-column h2>div>span[style*="--i: 8;"] {
         padding-top: unset;
     }
 
-    #intro_left-column h2>span[style*="--i: 9;"] {
+    #intro_left-column h2>div>span[style*="--i: 9;"] {
         transform: unset;
     }
 
-    #intro_left-column h2>span[style*="--i: 10;"] {
+    #intro_left-column h2>div>span[style*="--i: 10;"] {
         transform: unset;
     }
 
-    #intro_left-column h2>span[style*="--i: 11;"] {
+    #intro_left-column h2>div>span[style*="--i: 11;"] {
         transform: unset;
     }
 }
@@ -808,7 +819,7 @@ body {
     }
 }
 
-#menu_button > div {
+#menu_button>div {
     display: grid;
     grid-template-rows: min-content min-content;
     grid-template-columns: min-content min-content;
@@ -819,7 +830,7 @@ body {
 }
 
 @media (min-width: 45rem) {
-    #menu_button > div {
+    #menu_button>div {
         transform: rotate(0deg);
     }
 }
@@ -1325,7 +1336,7 @@ body {
     transition-timing-function: var(--ease-in-quad);
 }
 
-.tooltip_wrapper:hover .tooltip {
+.tooltip_wrapper:hover .tooltip, .tooltip_wrapper:focus-within .tooltip {
     opacity: 1;
     transition-duration: 0.15s;
     transition-timing-function: var(--ease-out-quad);
